adding more styling and images

--- a/style.css
+++ b/style.css
@@ -20,14 +20,16 @@ main {
     border-radius: 2rem;
     z-index: 2;
     backdrop-filter: blur(2rem);
+    display: flex;
 }
 
 .circle1, .circle2 {
     background: white;
     width: 20rem;
     height: 20rem;
-    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.3));
+    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.2));
     position: absolute;
+    border-radius: 50%;
 }
 
 .circle1 {
@@ -38,4 +40,29 @@ main {
 .circle2 {
     bottom: 5%;
     left: 10%;
+}
+
+.dashboard {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    text-align: center;
+    border-radius: 2rem;
+    background: linear-gradient(
+    to right bottom,
+    rgba(255, 255, 255, 0.6),
+    rgba(255, 255, 255, 0.2)
+  );
+}
+
+.info {
+    flex: 2;
+}
+
+ img {
+    border-radius: 10px;
+    width: 20%;
+    height: 20%;
 }
