--- a/style.css
+++ b/style.css
@@ -128,4 +128,15 @@ main {
     padding: 2rem;
     box-shadow: 6px 6px 20px rgba(122, 122, 122, 0.3);
     justify-content: space-between;
+    position: relative;
+}
+
+.card-info {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    position: absolute;
+    top: 2rem;
+    right: 10rem;
+    width: 8rem;
 }
